# ci-cd-demo

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile
.github/workflows/: ci.yml  container-ci.yml
src/: main.cpp  math_utils.cpp  math_utils.h
test/: test_coverage.cpp  test_math.cpp
